--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy Birthday</title>
-  <link rel="stylesheet" href="slick.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&family=Playfair+Display:ital@1&family=Sawarabi+Mincho&display=swap"
+    rel="stylesheet">
+
+  <!-- <link
+    href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&family=Monsieur+La+Doulaise&display=swap"
+    rel="stylesheet"> -->
+  <link rel="stylesheet" href="slick.css" />
   <link rel="stylesheet" href="slick-theme.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <header>
+  <header class="load-fade">
     <h1>Happy Birthday</h1>
     <div class="g-menu">
       <p>
@@ -34,39 +43,19 @@
   </header>
   <main>
     <div id="host">
-      <section class="wrapper">
+      <section class="wrapper scroll-up">
         <h2>HOST</h2>
-        <div class="host-content">
-          <div class="host-item">
-            <img src="images/host01.png" alt="">
-            <p>Name</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi cumque corporis libero itaque a, saepe
-              minus
-              nam
-              iste ea minima! Quae quas consequuntur excepturi, exercitationem mollitia vel praesentium aspernatur
-              incidunt.
-            </p>
-          </div>
-          <!-- /.host-item -->
-          <div class="host-item">
-            <img src="images/host02.png" alt="">
-            <p>Name</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi cumque corporis libero itaque a, saepe
-              minus
-              nam
-              iste ea minima! Quae quas consequuntur excepturi, exercitationem mollitia vel praesentium aspernatur
-              incidunt.
-            </p>
-          </div>
-          <!-- /.host-item -->
-        </div>
-        <!-- /.host-content -->
+        <img src="images/guests.jpg" alt="">
+        <p>お名前</p>
+        <p>
+          テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります
+        </p>
       </section>
       <!-- /.wrapper -->
     </div>
     <!-- /#host -->
     <div id="infomation">
-      <section class="wrapper">
+      <section class="wrapper scroll-up">
         <h2>INFOMATION</h2>
         <h3>Birthday Party</h3>
         <dl>
@@ -82,12 +71,33 @@
           <dt>電話番号</dt>
           <dd>000-000-0000</dd>
         </dl>
+        <div class="access-img">
+          <img src="images/access-img01.jpg" alt="">
+          <p>
+            テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります
+          </p>
+        </div>
+        <!-- /.access-img -->
+        <div class="access-img">
+          <img src="images/access-img01.jpg" alt="">
+          <p>
+            テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります
+          </p>
+        </div>
+        <!-- /.access-img -->
+        <div class="access-img">
+          <img src="images/access-img01.jpg" alt="">
+          <p>
+            テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります
+          </p>
+        </div>
+        <!-- /.access-img -->
       </section>
       <!-- /.wrapper -->
     </div>
     <!-- /#infomation -->
     <div id="message">
-      <section class="wrapper">
+      <section class="wrapper scroll-up">
         <h2>MESSAGE</h2>
         <p>＝＝＝感染予防対策について＝＝＝</p>
         <p>
@@ -110,23 +120,40 @@
           ソーシャルディスタンスの確保など
         </p>
         <p>ご協力よろしくお願いいたします</p>
+        <div class="message-comtent">
+          <div class="message-item">
+            <img src="images/host01.png" alt="">
+            <p>お名前</p>
+            <p>
+              テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります
+            </p>
+          </div>
+          <div class="message-item">
+            <img src="images/host02.png" alt="">
+            <p>お名前</p>
+            <p>
+              テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります
+            </p>
+          </div>
+        </div>
+        <!-- /.message-comtent -->
         <ul id="gallery-area">
-          <li><img src="http://placehold.jp/cec23b/ffffff/300x300.png" alt="" class="gallery-img"></li>
-          <li><img src="http://placehold.jp/cec23b/ffffff/300x300.png" alt="" class="gallery-img"></li>
-          <li><img src="http://placehold.jp/cec23b/ffffff/300x300.png" alt="" class="gallery-img"></li>
-          <li><img src="http://placehold.jp/a69c30/ffffff/300x300.png" alt="" class="gallery-img"></li>
-          <li><img src="http://placehold.jp/a69c30/ffffff/300x300.png" alt="" class="gallery-img"></li>
-          <li><img src="http://placehold.jp/cec23b/ffffff/300x300.png" alt="" class="gallery-img"></li>
-          <li><img src="http://placehold.jp/6d6722/ffffff/300x300.png" alt="" class="gallery-img"></li>
-          <li><img src="http://placehold.jp/6d6722/ffffff/300x300.png" alt="" class="gallery-img"></li>
-          <li><img src="http://placehold.jp/6d6722/ffffff/300x300.png" alt="" class="gallery-img"></li>
+          <li><img src="images/gallery-item01.jpg" alt=""></li>
+          <li><img src="images/gallery-item02.jpg" alt=""></li>
+          <li><img src="images/gallery-item03.jpg" alt=""></li>
+          <li><img src="images/gallery-item01.jpg" alt=""></li>
+          <li><img src="images/gallery-item02.jpg" alt=""></li>
+          <li><img src="images/gallery-item03.jpg" alt=""></li>
+          <li><img src="images/gallery-item01.jpg" alt=""></li>
+          <li><img src="images/gallery-item02.jpg" alt=""></li>
+          <li><img src="images/gallery-item03.jpg" alt=""></li>
         </ul>
       </section>
       <!-- /.wrapper -->
     </div>
     <!-- /#message -->
     <div id="presence-or-absence">
-      <section class="wrapper">
+      <section class="wrapper scroll-up">
         <H2>PRESENCE OR ABSENCE</H2>
         <p>
           お手数ですが　下記お日にち迄に
@@ -141,15 +168,26 @@
         <form action="#" method="post">
           <dl>
             <dt>名前</dt>
-            <dd><input type="text" name="" id=""></dd>
+            <dd><input type="text" name="" id="" placeholder="例）山田　太郎"></dd>
             <dt>ふりがな</dt>
-            <dd><input type="text" name="" id=""></dd>
+            <dd><input type="text" name="" id="" placeholder="例）ヤマダ　タロウ"></dd>
+            <dt>性別</dt>
+            <dd class="gender">
+              <input type="radio" name="gender" value="man">男
+              <input type="radio" name="gender" value="woman">女
+            </dd>
             <dt>電話番号</dt>
             <dd><input type="text" name="" id=""></dd>
             <dt>メールアドレス</dt>
-            <dd><input type="text" name="" id=""></dd>
+            <dd><input type="text" name="" id="" placeholder="例）info@web.jp"></dd>
             <dt>メッセージ</dt>
-            <dd><textarea name="" id="" cols="30" rows="10"></textarea></dd>
+            <dd><textarea name="" id="" cols="30" rows="10" placeholder="お誕生日のメッセージを送る事ができます"></textarea></dd>
+            <dt>アレルギー</dt>
+            <dd><input type="text" name="" id="" placeholder="アレルギーをお持ちの方のみご記入ください"></dd>
+            <div class="attendance">
+              <input type="radio" name="attendance" value="attend">出席
+              <input type="radio" name="attendance" value="decline">欠席
+            </div>
           </dl>
           <button>送信</button>
         </form>
@@ -160,11 +198,11 @@
   </main>
   <footer>
     <div id="thank-you">
-      <section class="wrapper">
+      <section class="wrapper scroll-up">
         <h2>THANK YOU</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos hic perferendis impedit atque, voluptatum
-          tenetur.
-          Quae maiores illo sequi, pariatur ratione deleniti rem consequatur alias nihil quod labore debitis eos.</p>
+        <p>
+          テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります
+        </p>
       </section>
       <!-- /.wrapper -->
     </div>
