--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&family=Playfair+Display:ital@1&family=Sawarabi+Mincho&display=swap"
     rel="stylesheet">
-
-  <!-- <link
-    href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&family=Monsieur+La+Doulaise&display=swap"
-    rel="stylesheet"> -->
   <link rel="stylesheet" href="slick.css" />
   <link rel="stylesheet" href="slick-theme.css">
   <link rel="stylesheet" href="style.css">
@@ -165,31 +161,35 @@
           ご一報いただけますと幸いです
         </p>
         <h3>ゲスト様入力項目</h3>
-        <form action="#" method="post">
+        <form action="thankspage.html" method="post">
           <dl>
             <dt>名前</dt>
-            <dd><input type="text" name="" id="" placeholder="例）山田　太郎"></dd>
+            <dd><input type="text" name="entry.494007486" id="" required placeholder="例）山田　太郎">
+            </dd>
             <dt>ふりがな</dt>
-            <dd><input type="text" name="" id="" placeholder="例）ヤマダ　タロウ"></dd>
+            <dd><input type="text" name="entry.1168293090" id="" required placeholder="例）やまだ　たろう"></dd>
             <dt>性別</dt>
-            <dd class="gender">
-              <input type="radio" name="gender" value="man">男
-              <input type="radio" name="gender" value="woman">女
+            <dd class="radio-item">
+              <input type="radio" name="entry.877086558" id="" value="男" required>男
+              <input type="radio" name="entry.877086558" id="" value="女">女
             </dd>
             <dt>電話番号</dt>
-            <dd><input type="text" name="" id=""></dd>
+            <dd><input type="tel" name="entry.1095315661" id="" required></dd>
             <dt>メールアドレス</dt>
-            <dd><input type="text" name="" id="" placeholder="例）info@web.jp"></dd>
+            <dd><input type="mail" name="entry.1144123121" id="" required placeholder="例）info@web.jp">
+            </dd>
             <dt>メッセージ</dt>
-            <dd><textarea name="" id="" cols="30" rows="10" placeholder="お誕生日のメッセージを送る事ができます"></textarea></dd>
+            <dd><textarea name="entry.383498296" id="" cols="30" rows="10" placeholder="お誕生日のメッセージを送る事ができます"></textarea>
+            </dd>
             <dt>アレルギー</dt>
-            <dd><input type="text" name="" id="" placeholder="アレルギーをお持ちの方のみご記入ください"></dd>
-            <div class="attendance">
-              <input type="radio" name="attendance" value="attend">出席
-              <input type="radio" name="attendance" value="decline">欠席
-            </div>
+            <dd><input type="text" name="entry.736284177" id="" placeholder="アレルギーをお持ちの方のみご記入ください"></dd>
+            <dt>出席確認</dt>
+            <dd class="radio-item">
+              <input type="radio" name="entry.1424661284" id="" value="出席" required>出席
+              <input type="radio" name="entry.1424661284" id="" value="欠席">欠席
+            </dd>
           </dl>
-          <button>送信</button>
+          <button type="submit">送信</button>
         </form>
       </section>
       <!-- /.wrapper -->
@@ -210,7 +210,12 @@
   </footer>
   <script src="js/jquery-3.6.1.min.js"></script>
   <script src="js/slick.min.js"></script>
-  <script src="js/menu.js"></script>
+  <script src="js/main.js"></script>
+  <script>
+    let submitted = false;
+  </script>
+  <iframe name="hidden_iframe" style="display: none;"
+    onload="if(submitted){window.location='thankspage.html';}"></iframe>
 </body>
 
 </html>
