--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           ご一報いただけますと幸いです
         </p>
         <h3>ゲスト様入力項目</h3>
-        <form action="thankspage.html" method="post">
+        <form action="#" method="post">
           <dl>
             <dt>名前</dt>
             <dd><input type="text" name="entry.494007486" id="" required placeholder="例）山田　太郎">
