--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy Birthday</title>
+  <meta property="og:url" content="https://miura1980.github.io/birthday/index.html">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Happy Birthday">
+  <meta property="og:description" content="お誕生日出欠確認用サイト">
+  <meta property="og:image" content="https://github.com/miura1980/birthday/blob/main/images/mv-bg.jpg">
+  <meta property="" content="">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -161,32 +167,32 @@
           ご一報いただけますと幸いです
         </p>
         <h3>ゲスト様入力項目</h3>
-        <form action="#" method="post">
+        <form action="thankspage.html" method="post">
           <dl>
             <dt>名前</dt>
-            <dd><input type="text" name="entry.494007486" id="" required placeholder="例）山田　太郎">
+            <dd><input type="text" name="" id="" required placeholder="例）山田　太郎">
             </dd>
             <dt>ふりがな</dt>
-            <dd><input type="text" name="entry.1168293090" id="" required placeholder="例）やまだ　たろう"></dd>
+            <dd><input type="text" name="" id="" required placeholder="例）やまだ　たろう"></dd>
             <dt>性別</dt>
             <dd class="radio-item">
-              <input type="radio" name="entry.877086558" id="" value="男" required>男
-              <input type="radio" name="entry.877086558" id="" value="女">女
+              <input type="radio" name="" id="" value="男" required>男
+              <input type="radio" name="" id="" value="女">女
             </dd>
             <dt>電話番号</dt>
-            <dd><input type="tel" name="entry.1095315661" id="" required></dd>
+            <dd><input type="tel" name="" id="" required></dd>
             <dt>メールアドレス</dt>
-            <dd><input type="mail" name="entry.1144123121" id="" required placeholder="例）info@web.jp">
+            <dd><input type="mail" name="" id="" required placeholder="例）info@web.jp">
             </dd>
             <dt>メッセージ</dt>
-            <dd><textarea name="entry.383498296" id="" cols="30" rows="10" placeholder="お誕生日のメッセージを送る事ができます"></textarea>
+            <dd><textarea name="" id="" cols="30" rows="10" placeholder="お誕生日のメッセージを送る事ができます"></textarea>
             </dd>
             <dt>アレルギー</dt>
-            <dd><input type="text" name="entry.736284177" id="" placeholder="アレルギーをお持ちの方のみご記入ください"></dd>
+            <dd><input type="text" name="" id="" placeholder="アレルギーをお持ちの方のみご記入ください"></dd>
             <dt>出席確認</dt>
             <dd class="radio-item">
-              <input type="radio" name="entry.1424661284" id="" value="出席" required>出席
-              <input type="radio" name="entry.1424661284" id="" value="欠席">欠席
+              <input type="radio" name="" id="" value="出席" required>出席
+              <input type="radio" name="" id="" value="欠席">欠席
             </dd>
           </dl>
           <button type="submit">送信</button>
@@ -211,11 +217,6 @@
   <script src="js/jquery-3.6.1.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
-  <script>
-    let submitted = false;
-  </script>
-  <iframe name="hidden_iframe" style="display: none;"
-    onload="if(submitted){window.location='thankspage.html';}"></iframe>
 </body>
 
 </html>
