--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" prefix="og:https://ogp.me/ns#">
 
 <head>
   <meta charset="UTF-8">
@@ -11,7 +11,10 @@
   <meta property="og:title" content="Happy Birthday">
   <meta property="og:description" content="お誕生日出欠確認用サイト">
   <meta property="og:image" content="https://github.com/miura1980/birthday/blob/main/images/mv-bg.jpg">
-  <meta property="" content="">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Happy Birthday">
+  <meta name="twitter:description" content="お誕生日出欠確認用サイト">
+  <meta name="twitter:imag" content="https://github.com/miura1980/birthday/blob/main/images/mv-bg.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -167,7 +170,7 @@
           ご一報いただけますと幸いです
         </p>
         <h3>ゲスト様入力項目</h3>
-        <form action="thankspage.html" method="post">
+        <form action="#" method="post">
           <dl>
             <dt>名前</dt>
             <dd><input type="text" name="" id="" required placeholder="例）山田　太郎">
