--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Happy Birthday">
   <meta name="twitter:description" content="お誕生日出欠確認用サイト">
-  <meta name="twitter:imag" content="https://github.com/miura1980/birthday/images/mv-bg.jpg">
+  <meta name="twitter:image" content="https://github.com/miura1980/birthday/images/mv-bg.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
