--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Happy Birthday">
   <meta property="og:description" content="お誕生日出欠確認用サイト">
-  <meta property="og:image" content="https://github.com/miura1980/birthday/blob/main/images/mv-bg.jpg">
+  <meta property="og:image" content="images/mv-bg.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@m_miura1980">
   <meta name="twitter:title" content="Happy Birthday">
   <meta name="twitter:description" content="お誕生日出欠確認用サイト">
-  <meta name="twitter:image" content="https://github.com/miura1980/birthday/blob/main/images/mv-bg.jpg">
+  <meta name="twitter:image" content="images/mv-bg.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
